# deferred-columns

./: AUTHORS.md  CMakeLists.txt  Makefile  README.md  TECHNICAL_DOCS.md  WHITEPAPER.md  benchmark.py  benchmark.sql  benchmark_trials.sh  colab_demo.ipynb  commit_history.sh  extension_config.cmake  generate_colab.py  model.onnx
.cache/clangd/release/: compile_commands.json
.github/workflows/: MainDistributionPipeline.yml
paper/: IEEEtran.cls  main.aux  main.out  main.tex  plot_benchmarks.py
scripts/: bench_static_query.py  hotswap_test.py  onnx_speed_test.py  static_backfill.py  static_backfill_trials.py  static_query_test.py  static_query_test.sh  test_explain.py  test_memory_growth.py  test_mvcc_isolation.py  test_mvcc_isolation_v2.py  test_null_handling.py  test_real_null_handling.py  test_sum_ci.py
src/: deferred_aggregates.cpp  deferred_columns_extension.cpp  deferred_optimizer.cpp  deferred_scan.cpp  model_registry.cpp
src/include/: deferred_aggregates.hpp  deferred_columns_extension.hpp  model_registry.hpp  onnxruntime_cxx_api.h
test/sql/: deferred_columns.test
